--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -105,3 +105,29 @@ header h1{
     font-weight: 400;
     text-transform: uppercase;
 }
+
+table{
+    background-color: #f7e8c4;
+    border-collapse: collapse;
+    text-align: center;
+    border-radius: 10px;
+    margin: auto;
+}
+
+th, td{
+    border: 1px solid black;
+    padding: 40px;
+    width: 150px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    font-family: bold;
+}
+
+.main-listagem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
